# ChangeLog for net-libs/libvncserver
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libvncserver/ChangeLog,v 1.98 2015/05/07 23:45:58 mrueg Exp $

  07 May 2015; Manuel Rüger <mrueg@gentoo.org> -libvncserver-0.9.7.ebuild:
  Remove old.

  30 Apr 2015; Agostino Sarubbo <ago@gentoo.org> libvncserver-0.9.10-r1.ebuild:
  Stable for amd64, wrt bug #515268

  26 Apr 2015; Ulrich Müller <ulm@gentoo.org> libvncserver-0.9.10-r1.ebuild:
  Straight to stable on alpha, hppa, ia64, ppc, and ppc64. The "vaapi" flag is
  in use.mask on these architectures, so the change from -r0 to -r1 shouldn't
  have any effect there. Bug 523590.

*libvncserver-0.9.10-r1 (26 Apr 2015)

  26 Apr 2015; Ulrich Müller <ulm@gentoo.org> +libvncserver-0.9.10-r1.ebuild:
  Add missing econf option, bug 523590 comment 18. Proxy commit for Alex Xu.

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> libvncserver-0.9.10.ebuild:
  ppc stable wrt bug #523590

  17 Apr 2015; Agostino Sarubbo <ago@gentoo.org> libvncserver-0.9.10.ebuild:
  Stable for ppc64, wrt bug #523590

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> libvncserver-0.9.10.ebuild:
  Stable for ia64, wrt bug #523590

  13 Apr 2015; Agostino Sarubbo <ago@gentoo.org> libvncserver-0.9.10.ebuild:
  Stable for alpha, wrt bug #523590

  09 Apr 2015; Agostino Sarubbo <ago@gentoo.org> libvncserver-0.9.10.ebuild:
  Stable for x86, wrt bug #523590

  09 Apr 2015; Agostino Sarubbo <ago@gentoo.org> libvncserver-0.9.10.ebuild:
  Stable for amd64, wrt bug #523590

  08 Apr 2015; Jeroen Roovers <jer@gentoo.org> libvncserver-0.9.10.ebuild:
  Stable for HPPA (bug #523590).

*libvncserver-0.9.10 (07 Apr 2015)

  07 Apr 2015; Ian Delaney <idella4@gentoo.org>
  +files/libvncserver-0.9.10-libva-1.0.patch, +libvncserver-0.9.10.ebuild,
  metadata.xml:
  bump; add required patch sourced from upstream, setting herd to proxy-
  maintainers and proxy maintainer to Alex Xu, all wrt sec bug #523590
