@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare pretend setup
+DEPEND=>=app-accessibility/speech-dispatcher-0.8:= app-arch/bzip2:= app-arch/snappy:= cups? ( >=net-print/cups-1.3.11:= ) >=dev-libs/elfutils-0.149 dev-libs/expat:= dev-libs/glib:= dev-libs/icu:= >=dev-libs/jsoncpp-0.5.0-r1:= >=dev-libs/libevent-1.4.13:= dev-libs/libxml2:=[icu] dev-libs/libxslt:= dev-libs/nspr:= >=dev-libs/nss-3.14.3:= dev-libs/re2:= gnome? ( >=gnome-base/gconf-2.24.0:= ) gnome-keyring? ( >=gnome-base/libgnome-keyring-3.12:= ) >=media-libs/alsa-lib-1.0.19:= media-libs/flac:= media-libs/fontconfig:= media-libs/freetype:= media-libs/harfbuzz:=[icu(+)] media-libs/libexif:= >=media-libs/libjpeg-turbo-1.2.0-r1:= media-libs/libpng:0= >=media-libs/libwebp-0.4.0:= >=media-libs/libvpx-1.4.0:= media-libs/speex:= pulseaudio? ( media-sound/pulseaudio:= ) sys-apps/dbus:= sys-apps/pciutils:= >=sys-libs/libcap-2.22:= sys-libs/zlib:=[minizip] virtual/udev x11-libs/cairo:= x11-libs/gdk-pixbuf:= x11-libs/gtk+:2= x11-libs/libdrm x11-libs/libX11:= x11-libs/libXcomposite:= x11-libs/libXcursor:= x11-libs/libXdamage:= x11-libs/libXext:= x11-libs/libXfixes:= >=x11-libs/libXi-1.6.0:= x11-libs/libXinerama:= x11-libs/libXrandr:= x11-libs/libXrender:= x11-libs/libXScrnSaver:= x11-libs/libXtst:= x11-libs/pango:= kerberos? ( virtual/krb5 ) !arm? ( dev-lang/yasm ) dev-lang/perl dev-perl/JSON >=dev-util/gperf-3.0.3 dev-util/ninja sys-apps/hwids[usb(+)] >=sys-devel/bison-2.4.3 sys-devel/flex virtual/pkgconfig widevine? ( www-plugins/chrome-binary-plugins[widevine] ) || ( ( >=dev-lang/python-2.7.5-r2:2.7 dev-python/beautifulsoup:python-2[python_targets_python2_7(-),python_single_target_python2_7(+)] dev-python/jinja[python_targets_python2_7(-),python_single_target_python2_7(+)] dev-python/ply[python_targets_python2_7(-),python_single_target_python2_7(+)] dev-python/simplejson[python_targets_python2_7(-),python_single_target_python2_7(+)] ) ) >=sys-apps/sed-4 test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost )
+DESCRIPTION=Open-source version of Google Chrome web browser
+EAPI=5
+HOMEPAGE=http://chromium.org/
+IUSE=cups gnome gnome-keyring hidpi kerberos neon pic proprietary-codecs pulseaudio selinux +tcmalloc widevine custom-cflags +linguas_am +linguas_ar +linguas_bg +linguas_bn +linguas_ca +linguas_cs +linguas_da +linguas_de +linguas_el +linguas_en_GB +linguas_es +linguas_es_LA +linguas_et +linguas_fa +linguas_fi +linguas_fil +linguas_fr +linguas_gu +linguas_he +linguas_hi +linguas_hr +linguas_hu +linguas_id +linguas_it +linguas_ja +linguas_kn +linguas_ko +linguas_lt +linguas_lv +linguas_ml +linguas_mr +linguas_ms +linguas_nb +linguas_nl +linguas_pl +linguas_pt_BR +linguas_pt_PT +linguas_ro +linguas_ru +linguas_sk +linguas_sl +linguas_sr +linguas_sv +linguas_sw +linguas_ta +linguas_te +linguas_th +linguas_tr +linguas_uk +linguas_vi +linguas_zh_CN +linguas_zh_TW test
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=BSD
+RDEPEND=>=app-accessibility/speech-dispatcher-0.8:= app-arch/bzip2:= app-arch/snappy:= cups? ( >=net-print/cups-1.3.11:= ) >=dev-libs/elfutils-0.149 dev-libs/expat:= dev-libs/glib:= dev-libs/icu:= >=dev-libs/jsoncpp-0.5.0-r1:= >=dev-libs/libevent-1.4.13:= dev-libs/libxml2:=[icu] dev-libs/libxslt:= dev-libs/nspr:= >=dev-libs/nss-3.14.3:= dev-libs/re2:= gnome? ( >=gnome-base/gconf-2.24.0:= ) gnome-keyring? ( >=gnome-base/libgnome-keyring-3.12:= ) >=media-libs/alsa-lib-1.0.19:= media-libs/flac:= media-libs/fontconfig:= media-libs/freetype:= media-libs/harfbuzz:=[icu(+)] media-libs/libexif:= >=media-libs/libjpeg-turbo-1.2.0-r1:= media-libs/libpng:0= >=media-libs/libwebp-0.4.0:= >=media-libs/libvpx-1.4.0:= media-libs/speex:= pulseaudio? ( media-sound/pulseaudio:= ) sys-apps/dbus:= sys-apps/pciutils:= >=sys-libs/libcap-2.22:= sys-libs/zlib:=[minizip] virtual/udev x11-libs/cairo:= x11-libs/gdk-pixbuf:= x11-libs/gtk+:2= x11-libs/libdrm x11-libs/libX11:= x11-libs/libXcomposite:= x11-libs/libXcursor:= x11-libs/libXdamage:= x11-libs/libXext:= x11-libs/libXfixes:= >=x11-libs/libXi-1.6.0:= x11-libs/libXinerama:= x11-libs/libXrandr:= x11-libs/libXrender:= x11-libs/libXScrnSaver:= x11-libs/libXtst:= x11-libs/pango:= kerberos? ( virtual/krb5 ) !=www-client/chromium-9999 !<www-plugins/chrome-binary-plugins-37 x11-misc/xdg-utils virtual/opengl virtual/ttf-fonts selinux? ( sec-policy/selinux-chromium ) tcmalloc? ( !<x11-drivers/nvidia-drivers-331.20 )
+RESTRICT=proprietary-codecs? ( bindist )
+SLOT=0
+SRC_URI=https://commondatastorage.googleapis.com/chromium-browser-official/chromium-43.0.2357.52.tar.xz
+_eclasses_=check-reqs	a7f404bfb16e0a996700c5d3ac4edad3	chromium	4a9f555199b35aa57f60b0e9b9627d2a	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	5d5921a298e95441da2f85be419894c0	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	pax-utils	dfe060cb70d89757fde5c1ff8405e950	portability	a45c088f246ef5091e029f6285d7ce42	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	096f8247eae93026af13ab88cf4305cd	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
+_md5_=d135d0f507ac53a5e66278ce60cf6127
