@@ -15,23 +15,23 @@ AUX chromium-widevine.patch 1461 SHA256 b352ea3512368fd77b6d342a043645a61204907c
 AUX chromium.default 148 SHA256 bdac1d32025d53158f96c8ad5bd71a58abdcf02f3a8759a43154e97e812fcdd1 SHA512 0d4849e03592fb58b05e62a43021eca7e61615616c8907c3b2e445402e03adaf9e8fa25b0a745d6c31eb037456215cc02b59e345a3a06d932e76cf990c92d739 WHIRLPOOL 2e51e864134426668cc73fc5081c35288677d8ce855b07dfbd3413397f9c43148a6d6096a9b7a617511388f87623a3ce7f3387103202db53876a74bccb9dbe6c
 AUX dot-gclient 174 SHA256 0ae6d69323d1d286de7ef1fa62c330536ada7280bda7564fefb5d071384ed324 SHA512 ea858464ee8732536633259ed3d11990822e8b8493c07b83218856a127320ba21b9cfc184f7e7a899739bc5f938fbca25224e559fb7db8558cb86fccc743a685 WHIRLPOOL 72a5a9af7955e653151090b555c6a67a261ff807871fdda16d7c3fabf4b52449ac9caae466ba51a17d2efed74a68adc32687599ea4287cc033e75f787d874b55
 DIST chromium-42.0.2311.135.tar.xz 306488116 SHA256 c269d40e653794c219fd3eca2922d881199af5acff5d0a55b3e79f3b6a5a2aa9 SHA512 1205b34be45d7b2a0839366d8ae6ca95c8dd031dc2da08167b8ec7c044b6d5e1bad955ac60f891a586ade81ff87801d6c908ad8979c203321f8c5176f9583c93 WHIRLPOOL ed565e83b097575dfcdf61cc1f1f1f049b39187c212e6973fe3c3e28da9960f4774bedb0711d4ff9ae62a802083f096dd62a4cd0e8a0e06f3af3df7e4f10c899
-DIST chromium-43.0.2357.18.tar.xz 309041380 SHA256 0a9a32197cf590354030e4c2f7560a330528235cbae4247f5f704e0a9425c2c0 SHA512 140201e1a4baae03ccb92bacd31b337d5c86dfe5018c70da9e12a80dcab7953e4d913adf5e930e15d992869221090fb02d4d27fcaba5bc3a8b5a8303314e6ecb WHIRLPOOL 8b717d1b1cd8918befdfd48fd6f4918023145f4220a64c97cf5f9c0252b5a17725684a1451532fb400c948139634a3d4acee73b7d913d8670c144f554080c855
 DIST chromium-43.0.2357.45.tar.xz 308939472 SHA256 9827c03ad4b61493ae34352fa3ded8f0f6af65ec14a8a5d021cd723b598401eb SHA512 bc2b79f35c76b5f01f913a93ca294d42c14a38a8ab68aae81013a634ed216b7682f0336025e69f1669fbf2cf15b9f337bd261dc3cf498f1365ce6a546dbc79c1 WHIRLPOOL 0f1bcd20882f55dddad7bbef0702e4f56e83472a69a9de1278a8328522c0bbd0e40c69654a7b646646acce33074fe73835badfd065de9ba2755186c4df2602c9
+DIST chromium-43.0.2357.52.tar.xz 308924832 SHA256 5272a2cef5cb8f0b865ffc2bd008bf97e00debc50666b933242939537f8bbb42 SHA512 dbfca8fc56a4acfa027bf4d3b9e78f71698598b911ae984b20b377b8347cf17eee71f3ec7983bff6c2cb864ed8246150f82ba92670dbb873412c49e6a7bfdcc0 WHIRLPOOL d101082c9ba6affa9b01a077a8649600e5d115360ceaf1a5278dbb04fe007b56ba622852e3639df63d913a77c396cd32212d5d0cfc5d04672790cd9eaffb5a79
 DIST chromium-44.0.2383.0.tar.xz 311401440 SHA256 76255c9f3e3f0e41a8827ed74918cfe838631a3809f4cf9c728f0dc7b8989eb7 SHA512 0c5f4baa7ff311436e62866eca4ffb9253b2dae1d69098036c1c6d6ae97c9b05401181f9202ff1922731e3e5dcdfa83de46f95191c65b6435fbdc300f93e6b50 WHIRLPOOL 307e2e5c37208e98d4bc2dd940ec10db520c1cd403aaf6d8616a795801a032657dedeb932abb371244f15ce7904697798060310bbc07dc2b013d2fbe9f8c011e
 DIST chromium-44.0.2391.0.tar.xz 312144548 SHA256 a61aae53cd4aeaac2cec4452f917f873c3f50b2fab9aa8ea8c07235be8393859 SHA512 3b64eb2cd6bb688abc6ed77f52f6f8b36017e2cfa1520b6d98e66296e9d0bd02c5d00cac76562d2b382ed8d4ed0c43624b95e8ce444da6fbfeaddbd59e9e067f WHIRLPOOL cb5f78ac9ae79dd84b131d9032e3b393fc0e08ea3ec6dd8e43ebeeb21874b5d12162c9e050080119243308c99a9431bcc825313fccf094eb229b3348fece16b6
 EBUILD chromium-42.0.2311.135.ebuild 20565 SHA256 5149d55649f705a8a9e9f233895123139a1c230acfb6a2b85c24dbed069d8085 SHA512 ba8d40fa8a601288a498f33d9670036da1dabecd15083f8f589e027c47e6f171c79257241313e4409e4de435d043abd1dfce55258a36ad22a65e951b4cbcd8eb WHIRLPOOL 3af83415abb8e0fc2e1bbe29fe9553e52670692afbb9208ee429809da8b8fe4aa21592815c355ff9476c78500d93c8e6a4a9aa15078607988fd8c8651c8ba36a
-EBUILD chromium-43.0.2357.18.ebuild 20227 SHA256 551d8fd33258d4070c04ff9d4b0afce713abb535459d4ec980fef0c8f545e5f7 SHA512 4ea50abe9475ae721327533dd93f5ddb2042964bf9da1cb530f07f7d5a6625d941b2f61c7a0318af45c839fa0fe9327551dcaf8a4d0d85c2c92529c5dee441c3 WHIRLPOOL 49ceed48245fc0e03f6427463076a5f8ff0c8e7291190f28c2b74a0e6bea277b53c35fbee75a9c2cfa7e1f1d790afb614cb0d933c1c206b518f8a969f84b5e5a
 EBUILD chromium-43.0.2357.45.ebuild 20237 SHA256 0a1c6bd3572f750ba3f310de83a9716a06552258268bb50881641129a0990486 SHA512 a9c3be9188059697d92b73776c5223fa8487fcca7cac2f0befdc9ca80c6eca1935a215bcf3b1f4ce182c34e3094ab38e607fc623598adba73fd51a5d53c64184 WHIRLPOOL 2ea544cce500dc3ceb8fb02062f180b6e6c2965c9206f29d71f782c0946e262fc1ebc8e0492b0964ca018ae4ca075a81aede1709c0588661ed517ba11b9d5693
+EBUILD chromium-43.0.2357.52.ebuild 20185 SHA256 b34de3daf65acaf6a1602dc669755a68b6c9c8ee2588785dab6af2aa9adb7976 SHA512 05819a532795a0d695af7478894f2229e75b7d4abe2398889c056de8772bf1333c642559b34984f864b08d999b4954b0e86dc3c6f3e645e112ea3c1ca18e4b75 WHIRLPOOL 836a3ceb6e223c478f51253ce19675e8962c8c7694530aec81f20673232fad60ef9884244669629a628eda2e690824dde77e957e3ff3360cd7b7fb8ff3155325
 EBUILD chromium-44.0.2383.0.ebuild 20352 SHA256 ed0565ec28a1e284b7081e8f5d8d753dd86b08e57886a1ebacb1e2c78dcaef10 SHA512 4b3de331a2a545fec14b2c97f3b1a0afea5723ff07f1acf9dfe0c6c023f3915baee135c4dda85f6cef9101759f4a4fbca7df4d9cab73137319f5ebf84168d3f9 WHIRLPOOL 19c87236479f828192d05a888ed3a53d62d7b4b15fd2b180e702caa66737ab93f0fece60f09af028da2833e155669abd1ea647471f1c71123088b1bafcad38f3
 EBUILD chromium-44.0.2391.0.ebuild 19381 SHA256 adc781bbfd88572a6d5ab12f312cf52284d17cd1ccc29b80e328fa19a06c280b SHA512 33d18210a0dc76b88ae8dcb7283a0aadd7fb88fbd86fa56181c3307d26869170c49e29a698d652d2540c5b8151dc25ecca507edf899842f8dfae5224ab858e36 WHIRLPOOL 930fad3133189de35ec042f23329a11a90a1093e6a8650557ff040e1adf59569c512473431dc21dc8241b748ab65d7f70300b192ec14ddc95ee441a35a1ca048
-MISC ChangeLog 11568 SHA256 de015662ed8e9e06e787ac426878727058e271bf6b8aafcf69b7608bade479cd SHA512 13d417cf76598fdd9e47a4e988bcfea1327a7ee4158ee386f75230d13abd9056144bb36fcf69f3fe2712edcd68c66abbcf8298b3b3dbdd14b2b9da93d25ca638 WHIRLPOOL edc9a0fb1b2bfe47ae3548b463e881fd3a1f24c4b8b3ceeaea460cdd6e00948e64b442e05f1f8cf84742e24c4a9ff0faa19b2bd18e210ad79cb781eea00ce64b
+MISC ChangeLog 11741 SHA256 92555576f0e2ae434bb3132c4dd63526f8ac979f660986968a312bea5cc1ae16 SHA512 665eb5c1ca4d89881a7c60add839ea0840745b3b32efb13fd4c47fabdfb42dd8f4665490fd15c77d262a2817a8a7d2162474b9e29ae1dc41423bb8caa942ee3e WHIRLPOOL 470bc111fc4ade0954b1e85e5f0d6bf9f283a60d8f2ec6d6de59a0f78061f378bcaee37c0c86b73a8c1f615d9752b7949e736ee30766a884b2b0de6373c901db
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC ChangeLog-2014 123105 SHA256 f67108708d3d21b4acfca327aca42ceb4cc31201772dff496babfacb50acc4eb SHA512 bf6464e7e6ccdee81a4c26949176ebfb705f99e85a0120eea77f52b862fa3b8142abb006462f31e5a9053777836d4d9fdb69926d2b01b49463553740aecdbc43 WHIRLPOOL 114181b4c8e700a56bdf76b4de2e94998436b1b27df9182348ab88afd352085938686359369ffa4af929936e9ad88305efc97e22afd3b4c50b0dcf9669286fea
 MISC metadata.xml 794 SHA256 325b937cabfd7753347c3c911fb8be689b4a7b021430fca37a92c26e7af35433 SHA512 079c7985283d160b85a8dcd53fd54538ee83b9b36fb99327f03aeff16eb3c6dcbb399a01a381094a67be901d970f3c8fa649b2ac156522df3156db2853b6566f WHIRLPOOL c110adec0f1dcb170e4ba52523109d340543d37027f4c6c9f6e6998744c2720177f03a963e7cd162512459c193e5107f0764b8e3dccf7278b008e7cb8a715b8f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlVL5wgACgkQC77qH+pIQ6ShcwD9GrnpwnkMFD4A3jdmpTb+j6PJ
-gGgM5miimLhil6omNG4BAL8wW7GoGu5ZZ1oiR8vhSPQXqNNqg5bHoNcsDM8uX5Df
-=GIH1
+iF4EAREIAAYFAlVMBi4ACgkQC77qH+pIQ6RGiwEAl46zTJEtWBIMTJMZPKwoktDa
+IbWaIA/wIrVKFDbtIIABAKpt5oid5OHO8KGRWrxCVIGosXiO/NcWoIvn8jUiUyq/
+=qZL1
 -----END PGP SIGNATURE-----
