@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libvncserver
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libvncserver/ChangeLog,v 1.98 2015/05/07 23:45:58 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libvncserver/ChangeLog,v 1.99 2015/05/08 00:42:21 idella4 Exp $
+
+*libvncserver-0.9.10-r2 (08 May 2015)
+
+  08 May 2015; Ian Delaney <idella4@gentoo.org> +libvncserver-0.9.10-r2.ebuild:
+  revbump; Proxy commit for Alex Xu wrt Bug #548012, drop use vaapi and libva
+  from ebuild
 
   07 May 2015; Manuel Rüger <mrueg@gentoo.org> -libvncserver-0.9.7.ebuild:
   Remove old.
